# insa_csb

./: .eslintrc.js  .gitignore  .travis.yml  README.md  cloudfront-invalidation.sh  package-lock.json  package.json  server.js  tsconfig.json  tslint.json  vue.config.js
Controller/Routes/: .base.routes.js.swp  base.routes.js
Model/: .item.model.js.swp  item.model.js
insa_backend/: Cargo.toml
insa_backend/migrations/2020-05-02-221326_create_users/: up.sql
insa_backend/migrations/2020-07-29-141104_create_users/: up.sql
insa_backend/migrations/2020-07-29-233722_create_users/: up.sql
insa_backend/src/: db.rs  gql_types.rs  graphql_schema.rs  jwt.rs  main.rs  models.rs  schema.rs
src/: App.vue  main.js  main.ts
src/assets/: sidenav-menu.json
src/components/: Basilians.vue  Contact.vue  EducationLevels.vue  InsaAdmission.vue  InsaFooter.vue  InsaHome.vue  InsaNavBar.vue  StudentLife.vue  Students.vue  Teachers.vue  TheSideNavMenu.vue
src/locales/: co.json  fr.json  gb.json  it.json
src/plugins/: i18n.js  i18n.ts
src/router/: index.js  index.ts
src/sass/: main.scss
src/services/: APIService.js
src/store/: index.js
src/styles/: settings.scss
tests/unit/: InsaHome.spec.js  InsaHome.spec.ts
view/: .eslintrc.js  .gitignore  package-lock.json  package.json  vue.config.js
view/public/: index.html
view/src/: App.vue  main.js
view/src/components/: Basilians.vue  HelloWorld.vue  InsaHome.vue  InsaNavBar.vue  TheSideNavMenu.vue
view/src/locales/: co.json  gb.json
view/src/plugins/: i18n.js
view/src/router/: index.js
(+5 files in other folders)
