[package]
name = "insa_backend"
version = "0.1.0"
authors = ["1kh4l <jhon.pantoja@correounivalle.edu.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.0"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.13.0"
env_logger = "0.6"
failure = "0.1.5"
futures = "0.1"
juniper = "0.13.1"
serde = { version = "1.0.88", features = ["derive"] }
serde_json = "1.0.38"
serde_derive = "1.0.88"
bcrypt = "0.3.0"
jsonwebtoken = "5.0.1"
pretty_env_logger = "0.3"
chrono = "0.4.6"
tokio-threadpool = "0.1.11"
